Improved Design and Fixed bugs to drawing Cards when it gets shuffled